brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__here_docs__parse_here_doc_left_open_in_nested_command_substitution.snap
---
source: brush-parser/src/parser/tests/here_docs.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo $(echo $(cat <<EOF)\nbody\nEOF\necho more\n)\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "$(echo $(cat <<EOF\nbody\nEOF\n)\necho more\n)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
