brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__here_docs__parse_here_doc_tab_stripped_with_parens_in_command_substitution_peg.snap
---
source: brush-parser/src/parser/tests/here_docs.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "X=$(\n\tcat <<-EOF\n\t\tprint(foo())\n\tEOF\n)\necho \"$X\"\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("X"),
                    value: Scalar(Word(
                      value: "$(\n\tcat <<-EOF\nprint(foo())\nEOF\n)",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "X=$(\n\tcat <<-EOF\nprint(foo())\nEOF\n)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "\"$X\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
