brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__here_docs__parse_pathological_here_docs.snap
---
source: brush-parser/src/parser/tests/here_docs.rs
expression: results
---
[
  ("$(cat <<EOF ${y}\nEOF", Err("unterminated expansion (detected near line 2 col 4)")),
  ("echo $(echo $(cat <<EOF) x\nEOF", Err("unterminated expansion (detected near line 2 col 4)")),
  ("echo $(echo $(cat <<EOF)\nbody\nEOF\n", Err("unterminated expansion (detected near line 4 col 1)")),
]
